k8s/dev/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "dev-cluster-issuer"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ecommerce.dev.local
      secretName: ecommerce-dev-tls
  rules:
    - host: ecommerce.dev.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-dev-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-dev-svc
                port:
                  number: 80
